fix: text aligned with header

--- a/pages/repertorio/Repertory.module.css
+++ b/pages/repertorio/Repertory.module.css
@@ -45,7 +45,7 @@
 	display: flex;
 	flex-direction: row;
 
-	justify-content: space-around;
+	justify-content: space-between;
 	margin-left: 10vw;
 	margin-right: 10vw;
 	width: 80vw;
